# PUPPET

./: .gitignore  CMakeLists.txt  README.md  auto_build.sh  build.sh  format_cpp.sh
app/cpp/: CMakeLists.txt
app/cpp/demos/: CMakeLists.txt
app/cpp/devices/: CMakeLists.txt  device_service_main.cpp  static_file_replay_device.cpp  static_file_replay_device_zmq.cpp
app/cpp/runtime/: CMakeLists.txt  teleop_runtime_embosa_main.cpp  teleop_runtime_main.cpp
app/cpp/tools/: CMakeLists.txt  retargeting_mujoco_visualizer.cpp  retargeting_mujoco_visualizer_tcp.cpp  retargeting_mujoco_visualizer_udp.cpp  retargeting_mujoco_visualizer_zmq.cpp
config/device/: device_service_scaled_embosa.yaml  device_service_scaled_zmq.yaml  device_service_single_chain_ik_embosa.yaml  device_service_single_chain_ik_zmq.yaml  device_service_static_file_embosa.yaml  device_service_static_file_zmq.yaml  static_file_replay_device.yaml  static_file_replay_device_zmq.yaml
config/runtime/: demo_single_chain_ik_runtime.yaml  demo_single_chain_ik_runtime_modular.yaml  demo_single_chain_ik_runtime_modular_tcp.yaml  demo_single_chain_ik_runtime_modular_udp.yaml  demo_single_chain_ik_runtime_modular_zmq.yaml  teleop_runtime.yaml  teleop_runtime_gmr.yaml
config/tools/: demo_single_chain_ik_visualizer.yaml  demo_single_chain_ik_visualizer_tcp.yaml  demo_single_chain_ik_visualizer_zmq.yaml  retargeting_mujoco_visualizer.yaml  retargeting_mujoco_visualizer_zmq.yaml
devel/x86_64-Linux-GNU-9.4.0/lib/: libpuppet_proto.so.0  libpuppet_proto.so.0.1.0
docs/: README.md  demo_gifs.md  developer_guide.md  developer_guide_en.md  device_service_三方库接入与源码迁移记录.md  proto_overview.md  puppet_communication_extension_plan.md  retargeting_3nodes_demo.md  retargeting_visualizer_alignment_summary.md  runtime_channel_zmq_接入说明.md  runtime_dispatch_capability_first_design.md  runtime_pipeline_priority_and_multi_device_design.md  sampleing_guideline.md  遥操作框架设计总结_中文.md
proto/: CMakeLists.txt  Readme.md
proto/cmake/: puppet_proto-config.cmake.in
proto/include/puppet/: primitive_frame.pb.h  primitive_trajectory.pb.h
proto/proto/puppet/: primitive_frame.proto  primitive_trajectory.proto  uniform.proto
proto/python/puppet/: primitive_trajectory_pb2.py
proto/src/puppet/: common.pb.cc  control_intent.pb.cc  primitive_frame.pb.cc
scripts/: print_puppet_logo.sh  start_retargeting_3nodes.sh  start_retargeting_3nodes_zmq.sh  start_single_chain_ik_modular_3nodes.sh  start_single_chain_ik_modular_device_service_embosa.sh  start_single_chain_ik_modular_device_service_zmq.sh  start_single_chain_ik_modular_embosa.sh  start_single_chain_ik_modular_zmq.sh
src/cpp/: CMakeLists.txt
src/cpp/puppet/common/: time_utils.cpp
src/cpp/puppet/config/: puppet_config.cpp
src/cpp/puppet/core/: puppet_manager.cpp
src/cpp/puppet/device/: device_provider_factory.cpp  device_service.cpp  device_service_config.cpp
src/cpp/puppet/device/scaled/: scaled_device_provider.cpp
src/cpp/puppet/device/single_chain_ik/: single_chain_ik_sender_device_provider.cpp
src/cpp/puppet/device/static_file_replay/: static_file_replay_device_provider.cpp
src/cpp/puppet/orchestrator/: orchestrator.cpp
src/cpp/puppet/retargeting/core/: direct_pass_through_plugin.cpp  retargeting_pipeline.cpp
src/cpp/puppet/retargeting/native/: gmr_retargeter_shim.cpp  gmr_retargeting_plugin.cpp
src/cpp/puppet/retargeting/native/gmr/: gmr_retargeter_shim.cpp  gmr_retargeting_plugin.cpp
src/cpp/puppet/retargeting/native/gmr/retarget/: human_frame_io.cpp  ik_config.cpp  retargeter.cpp  retargeter_mujoco.cpp  retargeter_mujoco_legacy.cpp  retargeter_pinocchio.cpp  retargeter_pinocchio_legacy.cpp
src/cpp/puppet/retargeting/native/gmr/solver/: hqp_solver.cpp  qp_solver.cpp
src/cpp/puppet/retargeting/native/gmr_cpp/: CMakeLists.txt  README.md
src/cpp/puppet/retargeting/native/gmr_cpp/examples/: human_frame_smplx_g1_example.json  retarget_viewer_config.yaml
src/cpp/puppet/retargeting/native/gmr_cpp/include/gmr/retarget/: ik_config.h  repo_paths.h  types.h
src/cpp/puppet/retargeting/native/gmr_cpp/include/gmr/solver/: hqp_solver.h
src/cpp/puppet/retargeting/native/gmr_cpp/src/: main_retarget_batch_cli.cpp  main_retarget_cli.cpp  main_retarget_viewer.cpp
src/cpp/puppet/retargeting/native/gmr_cpp/src/retarget/: retargeter.cpp  retargeter_internal_utils.h  retargeter_mujoco.cpp  retargeter_mujoco_legacy.cpp  retargeter_pinocchio.cpp  retargeter_pinocchio_legacy.cpp
src/cpp/puppet/retargeting/native/single_chain_ik/: single_chain_ik_retargeting_plugin.cpp
src/cpp/puppet/robot/backend/: direct_mapping_backend.cpp
src/cpp/puppet/runtime/: embosa_runtime_channel.cpp  embosa_runtime_config.cpp  message_snapshot.cpp  puppet_manager.cpp  robot_state_sync.cpp  runtime_config.cpp  runtime_state_report.cpp  teleop_runtime.cpp  time_utils.cpp
src/cpp/puppet/source/: source_manager.cpp
src/cpp/puppet/transport/: device_output_channel_factory.cpp  embosa_device_output_channel.cpp  embosa_runtime_channel.cpp  embosa_runtime_config.cpp  message_snapshot.cpp  proto_copy.cpp  tcp_runtime_channel.cpp  tcp_runtime_config.cpp  udp_runtime_channel.cpp  udp_runtime_config.cpp  zmq_device_output_channel.cpp  zmq_runtime_channel.cpp  zmq_runtime_config.cpp
src/cpp/puppet/transport/embosa/: embosa_device_output_channel.cpp  embosa_runtime_channel.cpp  embosa_runtime_config.cpp
src/cpp/puppet/transport/tcp/: tcp_runtime_channel.cpp  tcp_runtime_config.cpp
src/cpp/puppet/transport/udp/: udp_runtime_channel.cpp  udp_runtime_config.cpp
src/cpp/puppet/transport/zmq/: zmq_device_output_channel.cpp  zmq_runtime_channel.cpp  zmq_runtime_config.cpp
test/: CMakeLists.txt  README.md
test/demos/cpp/: CMakeLists.txt  README_embosa_proto_demo.md  README_single_chain_ik_mujoco_demo.md  embosa_puppet_proto_receiver.cpp  embosa_puppet_proto_sender.cpp  embosa_single_chain_ik_sender.cpp  single_chain_ik_demo_frame_builder.hpp  tcp_control_intent_receiver.cpp  tcp_single_chain_ik_sender.cpp  udp_control_intent_receiver.cpp  udp_single_chain_ik_sender.cpp  zmq_single_chain_ik_sender.cpp
(+84 files in other folders)
